--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1864,3 +1864,11 @@ body {
     -webkit-justify-content: center;
   }
 }
+.cid-rsG6ezqpiB {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rsG6ezqpiB P {
+  color: #767676;
+}
